<resources>
    <string name="app_name">Around World</string>
    <string name="aroundWorld">Around World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">login</string>
    <string name="or">Or</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign Up</string>
</resources>