<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignupWithEmailAddressConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginpagelayout"
        tools:context=".fragments.SignUpWithEmailAddressFragment">

        <EditText
            android:id="@+id/editTextEmailAddressSignUp"
            style="@style/loginFragmentEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:alpha="0.9"
            android:background="@drawable/emailgroup"
            android:drawableStart="@drawable/letter"
            android:drawablePadding="12sp"
            android:ems="10"
            android:fontFamily="@font/cairo_light"
            android:gravity="center_vertical"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress|textPersonName"
            android:paddingStart="24sp"
            android:paddingEnd="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextPasswordSignUp"
            style="@style/loginFragmentEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:alpha="0.9"
            android:background="@drawable/passwordgroup"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="12sp"
            android:ems="10"
            android:fontFamily="@font/cairo_light"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textPassword"
            android:paddingStart="24sp"
            android:paddingEnd="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            tools:ignore="VisualLintTextFieldSize" />


        <EditText
            android:id="@+id/editTextPhoneNumberSignUp"
            style="@style/loginFragmentEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:alpha="0.9"
            android:background="@drawable/phonenumbachground"
            android:drawableStart="@drawable/mobile"
            android:drawablePadding="12sp"
            android:fontFamily="@font/cairo_light"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="24sp"
            android:paddingEnd="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hover_on_buttons"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>